@@ -3200,8 +3200,29 @@ or
         for established sessions as we will commit everything in addition
         to already existing stateful NATs and LBs.
       </column>
-    </group>
 
+      <column name="options" key="ic-route-filter-adv">
+        <p>
+          This option expects list of CIDRs delimited by "," that's present
+          in the Logical Router. A route will not be advertised if the
+          route's prefix belongs to any of the CIDRs listed.
+
+          This allows to filter CIDR prefixes in the process of advertising
+          routes in <code>ovn-ic</code> daemon.
+        </p>
+      </column>
+
+      <column name="options" key="ic-route-filter-learn">
+        <p>
+          This option expects list of CIDRs delimited by "," that's present
+          in the Logical Router. A route will not be learned if the
+          route's prefix belongs to any of the CIDRs listed.
+
+          This allows to filter CIDR prefixes in the process of learning
+          routes in <code>ovn-ic</code> daemon.
+        </p>
+      </column>
+    </group>
     <group title="Common Columns">
       <column name="external_ids">
         See <em>External IDs</em> at the beginning of this document.
@@ -4179,6 +4200,27 @@ or
         instead of the autodiscovery. Also it is then irrelevant if the port
         is bound locally.
       </column>
+      <column name="options" key="ic-route-filter-adv">
+         <p>
+           This option expects list of CIDRs delimited by "," that's present
+           in the Logical Router Port. A route will be advertised if the
+           route's prefix belongs to any of the CIDRs listed.
+
+           This allows to filter CIDR prefixes in the process of advertising
+           routes in <code>ovn-ic</code> daemon.
+         </p>
+       </column>
+
+       <column name="options" key="ic-route-filter-learn">
+         <p>
+           This option expects list of CIDRs delimited by "," that's present
+           in the Logical Router Port. A route will be learned if the
+           route's prefix belongs to any of the CIDRs listed.
+
+           This allows to filter CIDR prefixes in the process of learning
+           routes in <code>ovn-ic</code> daemon.
+         </p>
+       </column>
     </group>
 
     <group title="Attachment">
