@@ -20,6 +20,9 @@ Post v25.03.0
    - Introduce exclude-router-ips-from-garp in logical_switch_port column
      so that the router port IPs are not advertised in the GARPs.
    - Added support for port mirroring in OVN overlay.
+    - Added "ic-route-filter-adv" and "ic-route-filter-learn" options to
+     the Logical_Router/Logical_Router_Port tables to allow users to
+     filter advertised/learned IC routes.
 
 OVN v25.03.0 - 07 Mar 2025
 --------------------------
